<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">一起玩单词</string>
    <string name="action_settings">Settings</string>
    <string name="contentDescription">contentDescription</string>
    <string name="reg_title">注册新用户</string>
    <string name="reg_username">账号:</string>
    <string name="reg_username_in">常用邮箱</string>
    <string name="reg_password">密码:</string>
    <string name="reg_password_in">至少6位，字母或数字</string>
    <string name="reg_password＿confirm">确认密码:</string>
    <string name="reg_password_confirm_in">请再次输入密码</string>
    <string name="reg_email">昵称：</string>
    <string name="reg_email_in">起个名字吧</string>
    <string name="reg_tip">提示 \n填写邮箱方便您找回密码以及了解更多相关信息</string>
	<string name="register">确定</string>
	<string name="lg_username">邮箱或昵称</string>
	<string name="lg_password">请输入密码</string>
	<string name="lg_remember_info">记住登录信息</string>
	<string name="lg_register">注册</string>
	<string name="lg_normal">普通权限</string>
	<string name="lg_manage">管理权限</string>
	<string name="lg_function1">附加功能</string>
	<string name="lg_function2">附加功能</string>
	<string name="login">登　录</string>
	<string name="sending_request">正在发送请求</string>
	<string name="list_title">用户列表</string>
	<string name="list_userid">编号</string>
	<string name="list_username">用户名</string>
	<string name="modify_pwd_old">原密码:</string>
	<string name="modify_pwd_new">新密码:</string>
	<string name="modify_pwd_con">确认密码:</string>
	<string name="modify_emial_new">新邮箱:</string>
	<string name="show_userid">编　号:</string>
	<string name="delete_pwd">请输入该用户密码</string>
	<string name="reg_return">返回</string>
</resources>